ash-code/tui/src/app/snapshots/app__session_manager_tests__session_details_loading.snap
---
source: ash-code/tui/src/app/session_manager_tests.rs
expression: loading
---
  .                                                                            [— / —] [Dashboard]

  Idle (1)
> ○ Snapshot┌── Session details ──────────────────────────────────────────────────[✗]─┐
  Archived (│                                                                         │
            │  Session:     Snapshot session                                          │
            │  Session ID:  current                                                   │
            │  Lifecycle:   active                                                    │
            │  Status:      idle                                                      │
            │  Threads:     1                                                         │
            │  Total usage: 0 tokens                                                  │
            │  Model calls: 0                                                         │
            │  Threads:     Loading…                                                  │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │                                                                         │
            │  ↑/↓ scroll  ·  Esc to close                                            │
  ╭─────────└─────────────────────────────────────────────────────────────────────────┘──────────╮
  │ > Build anything                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
