ash-code/tui/src/app/snapshots/app__session_manager_tests__session_manager_idle_collapsed.snap
---
source: ash-code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]

> Idle (1)
  Archived (0)























  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ > Build anything                                                                             │
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯

  Enter to expand · Esc to return
